make main body wrap and fit correct screen size

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -4,6 +4,10 @@ html {
   overflow-x: hidden;
 }
 
+main {
+  width: 72%;
+}
+
 ul {
   list-style-type: none;
 }
